--- a/locales/ru/LC_MESSAGES/converty.po
+++ b/locales/ru/LC_MESSAGES/converty.po
@@ -33,7 +33,7 @@ msgstr "Пока, {fname}"
 
 #: source/telegram_bot.py:85
 msgid "Please specify one convertation format"
-msgstr "Пожалуйста выбери один формат конвертации"
+msgstr "Пожалуйста, выбери один формат конвертации"
 
 #: source/telegram_bot.py:88
 msgid ""
@@ -45,7 +45,7 @@ msgstr ""
 
 #: source/telegram_bot.py:126
 msgid "Something went wrong, please try again later"
-msgstr "Что-то пошло не так, пожалуйста попробуй еще раз позже"
+msgstr "Что-то пошло не так, пожалуйста, попробуй еще раз позже"
 
 #: source/telegram_bot.py:137
 msgid "All uploaded files deleted"
@@ -53,7 +53,7 @@ msgstr "Все загруженные файлы удалены"
 
 #: source/telegram_bot.py:145
 msgid "Please specify one language"
-msgstr "Пожалуйста выбери один язык"
+msgstr "Пожалуйста, выбери один язык"
 
 #: source/telegram_bot.py:148
 msgid ""
@@ -61,7 +61,7 @@ msgid ""
 "Choose supported one from: {langs}"
 msgstr ""
 "К сожалению, этот язык еще не поддерживается 😔️️️\n"
-"Выбери один из поддерживаемых из: {formats}"
+"Выбери один из поддерживаемых из: {langs}"
 
 #: source/telegram_bot.py:151
 msgid "Language successfully changed"
@@ -82,7 +82,7 @@ msgstr ""
 "/start для запуска бота\n"
 "/stop для остановки бота\n"
 "/make <формат> для конвертации файлов в заданный формат\n"
-"/reset для сброса всех загруженных файловs\n"
+"/reset для сброса всех загруженных файлов\n"
 "/lang для смены языка\n"
 "/help чтобы увидеть это сообщение или\n"
 "/help <команда> чтобы увидеть дополнительную информацию о выбранной "
@@ -144,7 +144,7 @@ msgstr "Я не знаю такой команды"
 
 #: source/telegram_bot.py:195
 msgid "Please specify one command"
-msgstr "Пожалуйста выбери одну команду"
+msgstr "Пожалуйста, выбери одну команду"
 
 #: source/telegram_bot.py:218
 msgid "Photo uploaded!"
