--- a/locales/en/LC_MESSAGES/converty.po
+++ b/locales/en/LC_MESSAGES/converty.po
@@ -79,6 +79,16 @@ msgid ""
 "/help to see this message or\n"
 "/help <command> to see additional information about chosen command\n"
 msgstr ""
+"Use commands:\n"
+"/start to launch the bot\n"
+"/stop to stop the bot\n"
+"/make <format> to convert files into format\n"
+"/reset to forget all uploaded files\n"
+"/lang to change language\n"
+"/feedback to write us\n"
+"/sendmail to add the email address\n"
+"/help to see this message or\n"
+"/help <command> to see additional information about chosen command\n"
 
 #: source/telegram_bot.py:200
 msgid ""
@@ -169,23 +179,4 @@ msgstr "Photo uploaded!"
 #: source/telegram_bot.py:286
 msgid "Document uploaded!"
 msgstr "Document uploaded!"
-
-#~ msgid ""
-#~ "Use commands:\n"
-#~ "/start to launch the bot\n"
-#~ "/stop to stop the bot\n"
-#~ "/make <format> to convert files into format\n"
-#~ "/reset to forget all uploaded files\n"
-#~ "/lang to change language\n"
-#~ "/help to see this message or\n"
-#~ "/help <command> to see additional information about chosen command\n"
-#~ msgstr ""
-#~ "Use commands:\n"
-#~ "/start to launch the bot\n"
-#~ "/stop to stop the bot\n"
-#~ "/make <format> to convert files into format\n"
-#~ "/reset to forget all uploaded files\n"
-#~ "/lang to change language\n"
-#~ "/help to see this message or\n"
-#~ "/help <command> to see additional information about chosen command\n"
 
