--- a/locales/fr/LC_MESSAGES/converty.po
+++ b/locales/fr/LC_MESSAGES/converty.po
@@ -80,6 +80,17 @@ msgid ""
 "/help to see this message or\n"
 "/help <command> to see additional information about chosen command\n"
 msgstr ""
+"Utiliser les commandes:\n"
+"/start pour lancer le bot\n"
+"/stop pour arrêter le bot\n"
+"/make <format> pour convertir des fichiers au format\n"
+"/reset pour oublier tous les fichiers téléchargés\n"
+"/lang pour changer de langue\n"
+"/feedback pour nous écrire\n"
+"/sendmail pour ajouter l'adresse e-mail\n"
+"/help pour voir ce message ou\n"
+"/help <command> pour voir des "
+"informations supplémentaires sur la commande choisie\n"
 
 #: source/telegram_bot.py:200
 msgid ""
@@ -171,24 +182,4 @@ msgstr "Photo téléchargée!"
 msgid "Document uploaded!"
 msgstr "Document téléchargé!"
 
-#~ msgid ""
-#~ "Use commands:\n"
-#~ "/start to launch the bot\n"
-#~ "/stop to stop the bot\n"
-#~ "/make <format> to convert files into format\n"
-#~ "/reset to forget all uploaded files\n"
-#~ "/lang to change language\n"
-#~ "/help to see this message or\n"
-#~ "/help <command> to see additional information about chosen command\n"
-#~ msgstr ""
-#~ "Utiliser les commandes:\n"
-#~ "/start pour lancer le bot\n"
-#~ "/stop pour arrêter le bot\n"
-#~ "/make <format> pour convertir des fichiers au format\n"
-#~ "/reset pour oublier tous les fichiers téléchargés\n"
-#~ "/lang pour changer de langue\n"
-#~ "/help pour voir ce message ou\n"
-#~ "/help <command> pour voir des "
-#~ "informations supplémentaires sur la commande"
-#~ " choisie\n"
 
