--- a/locales/ru/LC_MESSAGES/converty.po
+++ b/locales/ru/LC_MESSAGES/converty.po
@@ -80,6 +80,16 @@ msgid ""
 "/help to see this message or\n"
 "/help <command> to see additional information about chosen command\n"
 msgstr ""
+"Используй команды:\n"
+"/start для запуска бота\n"
+"/stop для остановки бота\n"
+"/make <формат> для конвертации файлов в заданный формат\n"
+"/reset для сброса всех загруженных файлов\n"
+"/lang для смены языка\n"
+"/feedback для обратной связи\n"
+"/sendmail для добавления почты\n"
+"/help чтобы увидеть это сообщение или\n"
+"/help <команда> чтобы увидеть дополнительную информацию о выбранной команде\n"
 
 #: source/telegram_bot.py:200
 msgid ""
@@ -170,24 +180,4 @@ msgstr "Фото загружено!"
 #: source/telegram_bot.py:286
 msgid "Document uploaded!"
 msgstr "Документ загружен!"
-
-#~ msgid ""
-#~ "Use commands:\n"
-#~ "/start to launch the bot\n"
-#~ "/stop to stop the bot\n"
-#~ "/make <format> to convert files into format\n"
-#~ "/reset to forget all uploaded files\n"
-#~ "/lang to change language\n"
-#~ "/help to see this message or\n"
-#~ "/help <command> to see additional information about chosen command\n"
-#~ msgstr ""
-#~ "Используй команды:\n"
-#~ "/start для запуска бота\n"
-#~ "/stop для остановки бота\n"
-#~ "/make <формат> для конвертации файлов в заданный формат\n"
-#~ "/reset для сброса всех загруженных файлов\n"
-#~ "/lang для смены языка\n"
-#~ "/help чтобы увидеть это сообщение или\n"
-#~ "/help <команда> чтобы увидеть дополнительную"
-#~ " информацию о выбранной команде\n"
 
